# africa-cartograms

./: README.md  pyproject.toml  svg_to_geojson.py
hexmap/: africa_hexmap.geojson
svg_to_geojson/: utils.py
