[project]
name = "africa-cartograms"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
lxml = "^5.4.0"
geojson = "^3.2.0"
matplotlib = "^3.10.3"
shapely = "^2.1.1"
svg-path = "^6.3"
black = "^25.1.0"

[project.tool]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
